# devflux

./: .gitignore  CHANGELOG.md  PENDIENTES.md  PRD.md  README.md  pyproject.toml
.devflux/: debug_classify.txt
devflux/: __init__.py  main.py
devflux/core/: __init__.py  client.py  config.py  context.py  credentials.py  orchestrator.py  runner.py  sessions.py
devflux/prompts/bugs/: bug-intake.j2  diagnostico.j2  fixer.j2  logs.j2  regression-guard.j2  reproductor.j2
devflux/prompts/dev/: analista.j2  arquitecto.j2  backend.j2  frontend.j2  implementer.j2  integrador.j2  planificador.j2  qa.j2  reviewer.j2
devflux/prompts/repo/: docs.j2  inventory.j2
devflux/tui/: __init__.py  app.py  styles.tcss
docs/: user-guide.md
docs/agents/: contextual-confirmation.md
tests/: conftest.py  test_e2e_regressions.py  test_eight_role_pipeline.py  test_provider_wizard.py  test_runner_hardening.py  test_sensitive_files.py  test_settings_modal.py  test_tui_logic.py  test_user_experience.py
